feat: update meta description tag
Replace meta description to the survey form to improve SEO and user
engagement.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JJ Ginon">
-    <meta name="description" content="Survey Form for XYZ Coding Academy">
+    <meta name="description"
+        content="Participate in the XYZ Coding Academy Survey to share your feedback and help us improve our courses and services. Your input is valuable to us!">
     <title>XYZ Coding Academy Survey Form</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
