feat: add favicon link
Add favicon link in the head section to display the favicon.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Participate in the XYZ Coding Academy Survey to share your feedback and help us improve our courses and services. Your input is valuable to us!">
     <title>XYZ Coding Academy Survey Form</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
